@@ -17,6 +17,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import io.airlift.log.Logger;
 import io.airlift.log.Logging;
+import io.trino.plugin.exchange.FileSystemExchangePlugin;
 import io.trino.plugin.tpch.TpchPlugin;
 import io.trino.testing.DistributedQueryRunner;
 import io.trino.tpch.TpchTable;
@@ -24,11 +25,13 @@ import io.trino.tpch.TpchTable;
 import java.io.File;
 import java.nio.file.Path;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-import static com.google.common.base.Preconditions.checkState;
 import static io.airlift.testing.Closeables.closeAllSuppress;
+import static io.trino.plugin.tpch.TpchMetadata.TINY_SCHEMA_NAME;
+import static io.trino.testing.QueryAssertions.copyTpchTables;
 import static io.trino.testing.TestingSession.testSessionBuilder;
 import static java.util.Objects.requireNonNull;
 
@@ -40,20 +43,13 @@ public final class IcebergQueryRunner
 
     private IcebergQueryRunner() {}
 
-    public static DistributedQueryRunner createIcebergQueryRunner(TpchTable<?>... tables)
+    public static DistributedQueryRunner createIcebergQueryRunner()
             throws Exception
     {
         return createIcebergQueryRunner(
-                ImmutableList.copyOf(tables));
-    }
-
-    public static DistributedQueryRunner createIcebergQueryRunner(Iterable<TpchTable<?>> tables)
-            throws Exception
-    {
-        return createIcebergQueryRunner(
-                ImmutableMap.of(),
-                ImmutableMap.of(),
-                tables);
+                Map.of(),
+                Map.of(),
+                List.of());
     }
 
     public static DistributedQueryRunner createIcebergQueryRunner(
@@ -76,26 +72,10 @@ public final class IcebergQueryRunner
             Optional<File> metastoreDirectory)
             throws Exception
     {
-        return createIcebergQueryRunner(
-                extraProperties,
-                connectorProperties,
-                SchemaInitializer.builder()
-                        .withClonedTpchTables(tables)
-                        .build(),
-                metastoreDirectory);
-    }
-
-    public static DistributedQueryRunner createIcebergQueryRunner(
-            Map<String, String> extraProperties,
-            Map<String, String> connectorProperties,
-            SchemaInitializer schemaInitializer,
-            Optional<File> metastoreDirectory)
-            throws Exception
-    {
         Builder builder = builder()
                 .setExtraProperties(extraProperties)
                 .setIcebergProperties(connectorProperties)
-                .setSchemaInitializer(schemaInitializer);
+                .setInitialTables(tables);
 
         metastoreDirectory.ifPresent(builder::setMetastoreDirectory);
         return builder.build();
@@ -111,12 +91,14 @@ public final class IcebergQueryRunner
     {
         private Optional<File> metastoreDirectory = Optional.empty();
         private ImmutableMap.Builder<String, String> icebergProperties = ImmutableMap.builder();
-        private Optional<SchemaInitializer> schemaInitializer = Optional.empty();
+        private Map<String, String> exchangeManagerProperties = ImmutableMap.of();
+        private List<TpchTable<?>> initialTables = ImmutableList.of();
 
         protected Builder()
         {
             super(testSessionBuilder()
                     .setCatalog(ICEBERG_CATALOG)
+                    .setSchema("tpch")
                     .build());
         }
 
@@ -139,17 +121,15 @@ public final class IcebergQueryRunner
             return self();
         }
 
-        public Builder setInitialTables(Iterable<TpchTable<?>> initialTables)
+        public Builder setExchangeManagerProperties(Map<String, String> exchangeManagerProperties)
         {
-            setSchemaInitializer(SchemaInitializer.builder().withClonedTpchTables(initialTables).build());
+            this.exchangeManagerProperties = ImmutableMap.copyOf(requireNonNull(exchangeManagerProperties, "exchangeManagerProperties is null"));
             return self();
         }
 
-        public Builder setSchemaInitializer(SchemaInitializer schemaInitializer)
+        public Builder setInitialTables(Iterable<TpchTable<?>> initialTables)
         {
-            checkState(this.schemaInitializer.isEmpty(), "schemaInitializer is already set");
-            this.schemaInitializer = Optional.of(requireNonNull(schemaInitializer, "schemaInitializer is null"));
-            amendSession(sessionBuilder -> sessionBuilder.setSchema(schemaInitializer.getSchemaName()));
+            this.initialTables = ImmutableList.copyOf(requireNonNull(initialTables, "initialTables is null"));
             return self();
         }
 
@@ -162,16 +142,24 @@ public final class IcebergQueryRunner
                 queryRunner.installPlugin(new TpchPlugin());
                 queryRunner.createCatalog("tpch", "tpch");
 
-                queryRunner.installPlugin(new IcebergPlugin());
-                Map<String, String> icebergProperties = new HashMap<>(this.icebergProperties.buildOrThrow());
-                if (!icebergProperties.containsKey("iceberg.catalog.type")) {
-                    Path dataDir = metastoreDirectory.map(File::toPath).orElseGet(() -> queryRunner.getCoordinator().getBaseDataDir().resolve("iceberg_data"));
-                    icebergProperties.put("iceberg.catalog.type", "TESTING_FILE_METASTORE");
-                    icebergProperties.put("hive.metastore.catalog.dir", dataDir.toString());
+                if (!exchangeManagerProperties.isEmpty()) {
+                    queryRunner.installPlugin(new FileSystemExchangePlugin());
+                    queryRunner.loadExchangeManager("filesystem", exchangeManagerProperties);
                 }
 
+                Path dataDir = metastoreDirectory.map(File::toPath).orElseGet(() -> queryRunner.getCoordinator().getBaseDataDir().resolve("iceberg_data"));
+
+                queryRunner.installPlugin(new IcebergPlugin());
+                Map<String, String> icebergProperties = new HashMap<>();
+                icebergProperties.put("iceberg.catalog.type", "TESTING_FILE_METASTORE");
+                icebergProperties.put("hive.metastore.catalog.dir", dataDir.toString());
+                icebergProperties.putAll(this.icebergProperties.buildOrThrow());
+
                 queryRunner.createCatalog(ICEBERG_CATALOG, "iceberg", icebergProperties);
-                schemaInitializer.orElse(SchemaInitializer.builder().build()).accept(queryRunner);
+
+                queryRunner.execute("CREATE SCHEMA tpch");
+
+                copyTpchTables(queryRunner, "tpch", TINY_SCHEMA_NAME, queryRunner.getDefaultSession(), initialTables);
 
                 return queryRunner;
             }
